Fixed card responsiveness and text overflow of EventCard

--- a/client/src/css/components-style/home/event-section.scss
+++ b/client/src/css/components-style/home/event-section.scss
@@ -1,13 +1,11 @@
 @import "../../variables.scss";
 
 .event-container{
-    
     position: relative;
     width: 100%;
     height: 100%;
     background-color: $background;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgb(39, 39, 39);
     overflow: hidden;
     transition: 0.3s;
     
@@ -70,13 +68,9 @@
             font-size: 16px;
         }
 
-        span{
-            cursor: pointer;
-            font-weight: bold;
-        }
-
         .event-date{
             font-size: 18px;
+            font-weight: bold;
             width: 90%;
             margin: 0 auto 0 auto;
         }
@@ -87,7 +81,7 @@
         position: absolute;
         width: 90%;
         left: 50%;
-        translate: -50%;
+        transform: translateX(-50%);
         display: flex;
         justify-content: center;
         margin-inline: auto;
@@ -115,6 +109,8 @@
 }
 
     @media only screen and (max-width: 1100px) {
+           min-height: 460px;
+        
         .event-overlay{
             .event-grid{
                 .event-grid-child{
@@ -136,22 +132,25 @@
 }
 
     @media only screen and (max-width: 850px) {
+        height: 300px;
+        min-height: 300px;
+
         .event-overlay{
             .event-grid{
-                width: 70%;
+                width: 100%;
                 height: 100%;
                 grid-template-rows: auto 2fr 20%;
                 .event-grid-child{
                     flex-direction: column;
 
                     h1{
-                        font-size: 24px;
+                        font-size: 26px;
                         margin-top: 3px;
                         margin-bottom: 0;
                         text-align: start;
                     }
                     .event-location{
-                        font-size: 16px;
+                        font-size: 20px;
                         margin: 0 0 0 20px;
                         font-weight: bold;
                     }
@@ -160,23 +159,27 @@
                     }
                     .event-description{
                         font-size: 16px;
-                        margin-top: 5px;
+                        margin-top: 10px;
                     }
                     .event-date{
-                        font-size: 14px;
+                        font-size: 18px;
                         font-weight: bold;
                     }
                 }
             }
 
             .event-btns{
-                left: auto;
-                right: 10px;
-                translate: 0;
-                width: auto;
+                right: 0;
+                width: 100%;
                 margin: 0;
                 bottom: 10px;
-                flex-direction: column;
+                justify-content: flex-end;
+               
+
+                button{
+                        width: 80px;
+                        font-size: 12px;
+                    }
 
                 @media only screen and (max-width: 430px) {
                     
