--- a/client/src/css/pages-style/Home.scss
+++ b/client/src/css/pages-style/Home.scss
@@ -101,6 +101,7 @@
 }
 
 .home-event-section{
+
     width: 100%;
     height: auto;
     display: flex;
@@ -119,30 +120,28 @@
     }
 
     .event-card-container{
+
         margin: auto;
         display: grid;
         align-items: center;
         justify-content: space-between;
         width: 100%;
         max-width: 1000px;
-        height: 400px;
+        max-height: auto;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 20px;
 
          @media only screen and (max-width: 1100px) {
-            height: 350px;
             width: 90%;
         }
 
         @media only screen and (max-width: 850px) {
-            height: 680px;
             grid-template-columns: 1fr;
             grid-template-rows: repeat(3, 1fr);
         }
 
         @media only screen and (max-width: 450px) {
-            height: 780px;
-            
+         
         }
    
     }
